fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -188,17 +188,18 @@
 .detailServicios{
   text-align: center;
   color: #32363A;
-  margin-top: 2%;
-  padding-left: -10%;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+
 }
 #img-asesoria{
-  width: 40%;
-  height:170%;
+  width:70%;
+  height:90%;
   transform: rotate(270deg);
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -60px;
+  margin-left: 15%;
   
 }
 #img-asesoria-sm{
@@ -209,29 +210,25 @@
     
 }
 #img-procesos-judiciales{
-  width:70%;
+  width:100%;
   height:100%;
-  padding-right: 8%;
-  margin-right: 8%;
-  float: right;
+  padding: 5%;
+  margin: 5%;
 }
 #img-procesos-judiciales-sm{
   width:100%;
   height:100%;
   padding: 5%;
-  margin: 5%;
+  margin-right: 10%;
   
   
 }
 
 #img-estudio-titulos{
-  width: 57%;
-  height:147%;
+  width: 90%;
+  height:110%;
   transform: rotate(270deg);
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -30px;
+  margin-left: 2%;
   padding: 3%;
   
 }
@@ -255,6 +252,9 @@
 }
 .carImgOffset{
   margin-top: -65px;
+}
+.carImgOffset-titulo{
+  margin-top: 25px;
 }
 .car{
   margin-left: 15%;
